<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ninoeat</string>
    <string name="email_hint">insert email</string>
    <string name="pass_hint">insert password</string>
    <string name="login">Login</string>
    <string name="register">Registrati</string>
    <string name="Confirm">Confirm</string>
    <string name="email_errata">Emailerrata </string>
    <string name="numero_telefono">NumeroTelefono</string>
    <string name="checkout_menu">Checkout</string>
    <string name="remove_title">Sei sicuro?</string>
    <string name="be_careful">Alert</string>
    <string name="conferma">Conferma</string>
    <string name="cancella">cancella operazione</string>

</resources>
